infra/baseline/cdk.out/BaselineStack.template.json
{
 "Resources": {
  "BaselineRole460E2AB2": {
   "Type": "AWS::IAM::Role",
   "Properties": {
    "AssumeRolePolicyDocument": {
     "Statement": [
      {
       "Action": "sts:AssumeRole",
       "Effect": "Allow",
       "Principal": {
        "Service": "ec2.amazonaws.com"
       }
      }
     ],
     "Version": "2012-10-17"
    },
    "ManagedPolicyArns": [
     {
      "Fn::Join": [
       "",
       [
        "arn:",
        {
         "Ref": "AWS::Partition"
        },
        ":iam::aws:policy/AmazonSSMManagedInstanceCore"
       ]
      ]
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "BaselineStack/BaselineRole/Resource"
   }
  },
  "BaselineRoleDefaultPolicy8289E758": {
   "Type": "AWS::IAM::Policy",
   "Properties": {
    "PolicyDocument": {
     "Statement": [
      {
       "Action": "ssm:GetParameter",
       "Effect": "Allow",
       "Resource": "arn:aws:ssm:eu-central-1:*:parameter/zero-rtt/*"
      }
     ],
     "Version": "2012-10-17"
    },
    "PolicyName": "BaselineRoleDefaultPolicy8289E758",
    "Roles": [
     {
      "Ref": "BaselineRole460E2AB2"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "BaselineStack/BaselineRole/DefaultPolicy/Resource"
   }
  },
  "ClientSG4CAE4F40": {
   "Type": "AWS::EC2::SecurityGroup",
   "Properties": {
    "GroupDescription": "Security group for baseline Client VM",
    "SecurityGroupEgress": [
     {
      "CidrIp": "0.0.0.0/0",
      "Description": "Allow all outbound traffic by default",
      "IpProtocol": "-1"
     }
    ],
    "SecurityGroupIngress": [
     {
      "CidrIp": "10.1.0.0/16",
      "Description": "VPC traffic",
      "IpProtocol": "-1"
     }
    ],
    "VpcId": {
     "Fn::ImportValue": "BaselinePacketTestStack:ExportsOutputRefPacketTestVPC787871FA3BDB9318"
    }
   },
   "Metadata": {
    "aws:cdk:path": "BaselineStack/ClientSG/Resource"
   }
  },
  "ClientNicSGF3451749": {
   "Type": "AWS::EC2::SecurityGroup",
   "Properties": {
    "GroupDescription": "Security group for baseline ClientNIC VM",
    "SecurityGroupEgress": [
     {
      "CidrIp": "0.0.0.0/0",
      "Description": "Allow all outbound traffic by default",
      "IpProtocol": "-1"
     }
    ],
    "SecurityGroupIngress": [
     {
      "CidrIp": "10.1.0.0/16",
      "Description": "VPC traffic",
      "IpProtocol": "-1"
     }
    ],
    "VpcId": {
     "Fn::ImportValue": "BaselinePacketTestStack:ExportsOutputRefPacketTestVPC787871FA3BDB9318"
    }
   },
   "Metadata": {
    "aws:cdk:path": "BaselineStack/ClientNicSG/Resource"
   }
  },
  "ServerNicSG2BD8942E": {
   "Type": "AWS::EC2::SecurityGroup",
   "Properties": {
    "GroupDescription": "Security group for baseline ServerNIC VM",
    "SecurityGroupEgress": [
     {
      "CidrIp": "0.0.0.0/0",
      "Description": "Allow all outbound traffic by default",
      "IpProtocol": "-1"
     }
    ],
    "SecurityGroupIngress": [
     {
      "CidrIp": "10.1.0.0/16",
      "Description": "VPC traffic",
      "IpProtocol": "-1"
     }
    ],
    "VpcId": {
     "Fn::ImportValue": "BaselinePacketTestStack:ExportsOutputRefPacketTestVPC787871FA3BDB9318"
    }
   },
   "Metadata": {
    "aws:cdk:path": "BaselineStack/ServerNicSG/Resource"
   }
  },
  "ServerSG6D12D859": {
   "Type": "AWS::EC2::SecurityGroup",
   "Properties": {
    "GroupDescription": "Security group for baseline Server VM",
    "SecurityGroupEgress": [
     {
      "CidrIp": "0.0.0.0/0",
      "Description": "Allow all outbound traffic by default",
      "IpProtocol": "-1"
     }
    ],
    "SecurityGroupIngress": [
     {
      "CidrIp": "10.1.0.0/16",
      "Description": "VPC traffic",
      "IpProtocol": "-1"
     }
    ],
    "VpcId": {
     "Fn::ImportValue": "BaselinePacketTestStack:ExportsOutputRefPacketTestVPC787871FA3BDB9318"
    }
   },
   "Metadata": {
    "aws:cdk:path": "BaselineStack/ServerSG/Resource"
   }
  },
  "ClientInstanceInstanceProfile4517B067": {
   "Type": "AWS::IAM::InstanceProfile",
   "Properties": {
    "Roles": [
     {
      "Ref": "BaselineRole460E2AB2"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "BaselineStack/ClientInstance/InstanceProfile"
   }
  },
  "ClientInstance1EA7BD59": {
   "Type": "AWS::EC2::Instance",
   "Properties": {
    "AvailabilityZone": "eu-central-1a",
    "BlockDeviceMappings": [
     {
      "DeviceName": "/dev/xvda",
      "Ebs": {
       "DeleteOnTermination": true,
       "VolumeSize": 30,
       "VolumeType": "gp3"
      }
     }
    ],
    "IamInstanceProfile": {
     "Ref": "ClientInstanceInstanceProfile4517B067"
    },
    "ImageId": {
     "Ref": "SsmParameterValueawsserviceamiamazonlinuxlatestamzn2amikernel510hvmx8664gp2C96584B6F00A464EAD1953AFF4B05118Parameter"
    },
    "InstanceType": "t3.micro",
    "SecurityGroupIds": [
     {
      "Fn::GetAtt": [
       "ClientSG4CAE4F40",
       "GroupId"
      ]
     }
    ],
    "SourceDestCheck": false,
    "SubnetId": {
     "Fn::ImportValue": "BaselinePacketTestStack:ExportsOutputRefPacketTestVPCClientSubnet1SubnetE86F43FC9CD6C463"
    },
    "Tags": [
     {
      "Key": "Name",
      "Value": "baseline-client"
     }
    ],
    "UserData": {
     "Fn::Base64": "#!/bin/bash\nyum update -y\namazon-linux-extras install -y epel\nyum install -y git python3 python3-pip iperf\nGITHUB_TOKEN=$(aws ssm get-parameter --name /zero-rtt/github-token --with-decryption --query Parameter.Value --output text --region eu-central-1)\ngit clone \"https://x-access-token:${GITHUB_TOKEN}@github.com/ofekm5/zero-rtt-demo.git\" /home/ec2-user/zero-rtt-demo\nchown -R ec2-user:ec2-user /home/ec2-user/zero-rtt-demo\nchmod -R 755 /home/ec2-user/zero-rtt-demo"
    }
   },
   "DependsOn": [
    "BaselineRoleDefaultPolicy8289E758",
    "BaselineRole460E2AB2"
   ],
   "Metadata": {
    "aws:cdk:path": "BaselineStack/ClientInstance/Resource"
   }
  },
  "ServerInstanceInstanceProfile33C2228C": {
   "Type": "AWS::IAM::InstanceProfile",
   "Properties": {
    "Roles": [
     {
      "Ref": "BaselineRole460E2AB2"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "BaselineStack/ServerInstance/InstanceProfile"
   }
  },
  "ServerInstance66AD925A": {
   "Type": "AWS::EC2::Instance",
   "Properties": {
    "AvailabilityZone": "eu-central-1a",
    "BlockDeviceMappings": [
     {
      "DeviceName": "/dev/xvda",
      "Ebs": {
       "DeleteOnTermination": true,
       "VolumeSize": 30,
       "VolumeType": "gp3"
      }
     }
    ],
    "IamInstanceProfile": {
     "Ref": "ServerInstanceInstanceProfile33C2228C"
    },
    "ImageId": {
     "Ref": "SsmParameterValueawsserviceamiamazonlinuxlatestamzn2amikernel510hvmx8664gp2C96584B6F00A464EAD1953AFF4B05118Parameter"
    },
    "InstanceType": "t3.micro",
    "SecurityGroupIds": [
     {
      "Fn::GetAtt": [
       "ServerSG6D12D859",
       "GroupId"
      ]
     }
    ],
    "SubnetId": {
     "Fn::ImportValue": "BaselinePacketTestStack:ExportsOutputRefPacketTestVPCServerSubnet1Subnet780ACC659593D101"
    },
    "Tags": [
     {
      "Key": "Name",
      "Value": "baseline-server"
     }
    ],
    "UserData": {
     "Fn::Base64": "#!/bin/bash\nyum update -y\namazon-linux-extras install -y epel\nyum install -y git python3 python3-pip iperf\nGITHUB_TOKEN=$(aws ssm get-parameter --name /zero-rtt/github-token --with-decryption --query Parameter.Value --output text --region eu-central-1)\ngit clone \"https://x-access-token:${GITHUB_TOKEN}@github.com/ofekm5/zero-rtt-demo.git\" /home/ec2-user/zero-rtt-demo\nchown -R ec2-user:ec2-user /home/ec2-user/zero-rtt-demo\nchmod -R 755 /home/ec2-user/zero-rtt-demo"
    }
   },
   "DependsOn": [
    "BaselineRoleDefaultPolicy8289E758",
    "BaselineRole460E2AB2"
   ],
   "Metadata": {
    "aws:cdk:path": "BaselineStack/ServerInstance/Resource"
   }
  },
  "ClientNicInstanceInstanceProfile1B179B92": {
   "Type": "AWS::IAM::InstanceProfile",
   "Properties": {
    "Roles": [
     {
      "Ref": "BaselineRole460E2AB2"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "BaselineStack/ClientNicInstance/InstanceProfile"
   }
  },
  "ClientNicInstance0B309363": {
   "Type": "AWS::EC2::Instance",
   "Properties": {
    "AvailabilityZone": "eu-central-1a",
    "BlockDeviceMappings": [
     {
      "DeviceName": "/dev/xvda",
      "Ebs": {
       "DeleteOnTermination": true,
       "VolumeSize": 30,
       "VolumeType": "gp3"
      }
     }
    ],
    "IamInstanceProfile": {
     "Ref": "ClientNicInstanceInstanceProfile1B179B92"
    },
    "ImageId": {
     "Ref": "SsmParameterValueawsserviceamiamazonlinuxlatestamzn2amikernel510hvmx8664gp2C96584B6F00A464EAD1953AFF4B05118Parameter"
    },
    "InstanceType": "t3.micro",
    "SecurityGroupIds": [
     {
      "Fn::GetAtt": [
       "ClientNicSGF3451749",
       "GroupId"
      ]
     }
    ],
    "SourceDestCheck": false,
    "SubnetId": {
     "Fn::ImportValue": "BaselinePacketTestStack:ExportsOutputRefPacketTestVPCClientSubnet1SubnetE86F43FC9CD6C463"
    },
    "Tags": [
     {
      "Key": "Name",
      "Value": "baseline-clientnic"
     }
    ],
    "UserData": {
     "Fn::Base64": "#!/bin/bash\nyum update -y\nyum install -y git python3 python3-pip\nGITHUB_TOKEN=$(aws ssm get-parameter --name /zero-rtt/github-token --with-decryption --query Parameter.Value --output text --region eu-central-1)\ngit clone \"https://x-access-token:${GITHUB_TOKEN}@github.com/ofekm5/zero-rtt-demo.git\" /home/ec2-user/zero-rtt-demo\nchown -R ec2-user:ec2-user /home/ec2-user/zero-rtt-demo\nchmod -R 755 /home/ec2-user/zero-rtt-demo\necho 'net.ipv4.ip_forward=1' >> /etc/sysctl.co [...]
    }
   },
   "DependsOn": [
    "BaselineRoleDefaultPolicy8289E758",
    "BaselineRole460E2AB2"
   ],
   "Metadata": {
    "aws:cdk:path": "BaselineStack/ClientNicInstance/Resource"
   }
  },
  "ClientNicMiddleENI": {
   "Type": "AWS::EC2::NetworkInterface",
   "Properties": {
    "GroupSet": [
     {
      "Fn::GetAtt": [
       "ClientNicSGF3451749",
       "GroupId"
      ]
     }
    ],
    "SourceDestCheck": false,
    "SubnetId": {
     "Fn::ImportValue": "BaselinePacketTestStack:ExportsOutputRefPacketTestVPCMiddleSubnet1Subnet189B22F6B240D9F0"
    }
   },
   "Metadata": {
    "aws:cdk:path": "BaselineStack/ClientNicMiddleENI"
   }
  },
  "ClientNicMiddleENIAttachment": {
   "Type": "AWS::EC2::NetworkInterfaceAttachment",
   "Properties": {
    "DeviceIndex": "1",
    "InstanceId": {
     "Ref": "ClientNicInstance0B309363"
    },
    "NetworkInterfaceId": {
     "Ref": "ClientNicMiddleENI"
    }
   },
   "Metadata": {
    "aws:cdk:path": "BaselineStack/ClientNicMiddleENIAttachment"
   }
  },
  "ServerNicInstanceInstanceProfileA8CCCD45": {
   "Type": "AWS::IAM::InstanceProfile",
   "Properties": {
    "Roles": [
     {
      "Ref": "BaselineRole460E2AB2"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "BaselineStack/ServerNicInstance/InstanceProfile"
   }
  },
  "ServerNicInstanceB7DB1ADE": {
   "Type": "AWS::EC2::Instance",
   "Properties": {
    "AvailabilityZone": "eu-central-1a",
    "BlockDeviceMappings": [
     {
      "DeviceName": "/dev/xvda",
      "Ebs": {
       "DeleteOnTermination": true,
       "VolumeSize": 30,
       "VolumeType": "gp3"
      }
     }
    ],
    "IamInstanceProfile": {
     "Ref": "ServerNicInstanceInstanceProfileA8CCCD45"
    },
    "ImageId": {
     "Ref": "SsmParameterValueawsserviceamiamazonlinuxlatestamzn2amikernel510hvmx8664gp2C96584B6F00A464EAD1953AFF4B05118Parameter"
    },
    "InstanceType": "t3.micro",
    "SecurityGroupIds": [
     {
      "Fn::GetAtt": [
       "ServerNicSG2BD8942E",
       "GroupId"
      ]
     }
    ],
    "SourceDestCheck": false,
    "SubnetId": {
     "Fn::ImportValue": "BaselinePacketTestStack:ExportsOutputRefPacketTestVPCMiddleSubnet1Subnet189B22F6B240D9F0"
    },
    "Tags": [
     {
      "Key": "Name",
      "Value": "baseline-servernic"
     }
    ],
    "UserData": {
     "Fn::Base64": "#!/bin/bash\nyum update -y\nyum install -y git python3 python3-pip\nGITHUB_TOKEN=$(aws ssm get-parameter --name /zero-rtt/github-token --with-decryption --query Parameter.Value --output text --region eu-central-1)\ngit clone \"https://x-access-token:${GITHUB_TOKEN}@github.com/ofekm5/zero-rtt-demo.git\" /home/ec2-user/zero-rtt-demo\nchown -R ec2-user:ec2-user /home/ec2-user/zero-rtt-demo\nchmod -R 755 /home/ec2-user/zero-rtt-demo\necho 'net.ipv4.ip_forward=1' >> /etc/sysctl.co [...]
    }
   },
   "DependsOn": [
    "BaselineRoleDefaultPolicy8289E758",
    "BaselineRole460E2AB2"
   ],
   "Metadata": {
    "aws:cdk:path": "BaselineStack/ServerNicInstance/Resource"
   }
  },
  "ServerNicServerENI": {
   "Type": "AWS::EC2::NetworkInterface",
   "Properties": {
    "GroupSet": [
     {
      "Fn::GetAtt": [
       "ServerNicSG2BD8942E",
       "GroupId"
      ]
     }
    ],
    "SourceDestCheck": false,
    "SubnetId": {
     "Fn::ImportValue": "BaselinePacketTestStack:ExportsOutputRefPacketTestVPCServerSubnet1Subnet780ACC659593D101"
    }
   },
   "Metadata": {
    "aws:cdk:path": "BaselineStack/ServerNicServerENI"
   }
  },
  "ServerNicServerENIAttachment": {
   "Type": "AWS::EC2::NetworkInterfaceAttachment",
   "Properties": {
    "DeviceIndex": "1",
    "InstanceId": {
     "Ref": "ServerNicInstanceB7DB1ADE"
    },
    "NetworkInterfaceId": {
     "Ref": "ServerNicServerENI"
    }
   },
   "Metadata": {
    "aws:cdk:path": "BaselineStack/ServerNicServerENIAttachment"
   }
  },
  "ClientRouteTable": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "VpcId": {
     "Fn::ImportValue": "BaselinePacketTestStack:ExportsOutputRefPacketTestVPC787871FA3BDB9318"
    }
   },
   "Metadata": {
    "aws:cdk:path": "BaselineStack/ClientRouteTable"
   }
  },
  "ClientSubnetRTA": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "ClientRouteTable"
    },
    "SubnetId": {
     "Fn::ImportValue": "BaselinePacketTestStack:ExportsOutputRefPacketTestVPCClientSubnet1SubnetE86F43FC9CD6C463"
    }
   },
   "Metadata": {
    "aws:cdk:path": "BaselineStack/ClientSubnetRTA"
   }
  },
  "ClientIGWRoute": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "DestinationCidrBlock": "0.0.0.0/0",
    "GatewayId": {
     "Fn::ImportValue": "BaselinePacketTestStack:ExportsOutputRefPacketTestVPCIGW8E9A3A0BDBA1E512"
    },
    "RouteTableId": {
     "Ref": "ClientRouteTable"
    }
   },
   "Metadata": {
    "aws:cdk:path": "BaselineStack/ClientIGWRoute"
   }
  },
  "ClientToServerViaNic": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "DestinationCidrBlock": "10.1.2.0/24",
    "InstanceId": {
     "Ref": "ClientNicInstance0B309363"
    },
    "RouteTableId": {
     "Ref": "ClientRouteTable"
    }
   },
   "Metadata": {
    "aws:cdk:path": "BaselineStack/ClientToServerViaNic"
   }
  },
  "MiddleRouteTable": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "VpcId": {
     "Fn::ImportValue": "BaselinePacketTestStack:ExportsOutputRefPacketTestVPC787871FA3BDB9318"
    }
   },
   "Metadata": {
    "aws:cdk:path": "BaselineStack/MiddleRouteTable"
   }
  },
  "MiddleSubnetRTA": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "MiddleRouteTable"
    },
    "SubnetId": {
     "Fn::ImportValue": "BaselinePacketTestStack:ExportsOutputRefPacketTestVPCMiddleSubnet1Subnet189B22F6B240D9F0"
    }
   },
   "Metadata": {
    "aws:cdk:path": "BaselineStack/MiddleSubnetRTA"
   }
  },
  "MiddleIGWRoute": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "DestinationCidrBlock": "0.0.0.0/0",
    "GatewayId": {
     "Fn::ImportValue": "BaselinePacketTestStack:ExportsOutputRefPacketTestVPCIGW8E9A3A0BDBA1E512"
    },
    "RouteTableId": {
     "Ref": "MiddleRouteTable"
    }
   },
   "Metadata": {
    "aws:cdk:path": "BaselineStack/MiddleIGWRoute"
   }
  },
  "MiddleToServerViaNic": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "DestinationCidrBlock": "10.1.2.0/24",
    "InstanceId": {
     "Ref": "ServerNicInstanceB7DB1ADE"
    },
    "RouteTableId": {
     "Ref": "MiddleRouteTable"
    }
   },
   "Metadata": {
    "aws:cdk:path": "BaselineStack/MiddleToServerViaNic"
   }
  },
  "MiddleToClientViaNic": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "DestinationCidrBlock": "10.1.0.0/24",
    "NetworkInterfaceId": {
     "Ref": "ClientNicMiddleENI"
    },
    "RouteTableId": {
     "Ref": "MiddleRouteTable"
    }
   },
   "Metadata": {
    "aws:cdk:path": "BaselineStack/MiddleToClientViaNic"
   }
  },
  "ServerRouteTable": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "VpcId": {
     "Fn::ImportValue": "BaselinePacketTestStack:ExportsOutputRefPacketTestVPC787871FA3BDB9318"
    }
   },
   "Metadata": {
    "aws:cdk:path": "BaselineStack/ServerRouteTable"
   }
  },
  "ServerSubnetRTA": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "ServerRouteTable"
    },
    "SubnetId": {
     "Fn::ImportValue": "BaselinePacketTestStack:ExportsOutputRefPacketTestVPCServerSubnet1Subnet780ACC659593D101"
    }
   },
   "Metadata": {
    "aws:cdk:path": "BaselineStack/ServerSubnetRTA"
   }
  },
  "ServerIGWRoute": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "DestinationCidrBlock": "0.0.0.0/0",
    "GatewayId": {
     "Fn::ImportValue": "BaselinePacketTestStack:ExportsOutputRefPacketTestVPCIGW8E9A3A0BDBA1E512"
    },
    "RouteTableId": {
     "Ref": "ServerRouteTable"
    }
   },
   "Metadata": {
    "aws:cdk:path": "BaselineStack/ServerIGWRoute"
   }
  },
  "ServerToClientViaNic": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "DestinationCidrBlock": "10.1.0.0/24",
    "NetworkInterfaceId": {
     "Ref": "ServerNicServerENI"
    },
    "RouteTableId": {
     "Ref": "ServerRouteTable"
    }
   },
   "Metadata": {
    "aws:cdk:path": "BaselineStack/ServerToClientViaNic"
   }
  },
  "CDKMetadata": {
   "Type": "AWS::CDK::Metadata",
   "Properties": {
    "Analytics": "v2:deflate64:H4sIAAAAAAAA/21PQWrDQAx8S+7rbeMUeg49lFxaY/ce5K1MVNtS0GoxxvjvwTFJWuhpRsNIM8p9/rL1zxsYYha+26yj2k+VQWgdDPE4EfR+KqVD99bwFQvpKIzL+GAHjgYcsFBpqMPZYcj9VGFISja+q6TzYvsr3JZ+H1j4B9og2h7YUBv4X9ubQTj1yLb2SoZfUK8tq1Qz2kPbxyiBwEj4bp7n6wOg0KOhuhKjJF2zPpOdk82uGO0k/LTz251/3fxEokwTG/XoyxUvLNOzDT0BAAA="
   },
   "Metadata": {
    "aws:cdk:path": "BaselineStack/CDKMetadata/Default"
   }
  }
 },
 "Parameters": {
  "SsmParameterValueawsserviceamiamazonlinuxlatestamzn2amikernel510hvmx8664gp2C96584B6F00A464EAD1953AFF4B05118Parameter": {
   "Type": "AWS::SSM::Parameter::Value<AWS::EC2::Image::Id>",
   "Default": "/aws/service/ami-amazon-linux-latest/amzn2-ami-kernel-5.10-hvm-x86_64-gp2"
  },
  "BootstrapVersion": {
   "Type": "AWS::SSM::Parameter::Value<String>",
   "Default": "/cdk-bootstrap/hnb659fds/version",
   "Description": "Version of the CDK Bootstrap resources in this environment, automatically retrieved from SSM Parameter Store. [cdk:skip]"
  }
 },
 "Outputs": {
  "ClientInstanceId": {
   "Description": "Client Instance ID",
   "Value": {
    "Ref": "ClientInstance1EA7BD59"
   }
  },
  "ClientPublicIp": {
   "Description": "Client Public IP",
   "Value": {
    "Fn::GetAtt": [
     "ClientInstance1EA7BD59",
     "PublicIp"
    ]
   }
  },
  "ClientNicInstanceId": {
   "Description": "ClientNIC Instance ID",
   "Value": {
    "Ref": "ClientNicInstance0B309363"
   }
  },
  "ClientNicPublicIp": {
   "Description": "ClientNIC Public IP",
   "Value": {
    "Fn::GetAtt": [
     "ClientNicInstance0B309363",
     "PublicIp"
    ]
   }
  },
  "ServerNicInstanceId": {
   "Description": "ServerNIC Instance ID",
   "Value": {
    "Ref": "ServerNicInstanceB7DB1ADE"
   }
  },
  "ServerNicPublicIp": {
   "Description": "ServerNIC Public IP",
   "Value": {
    "Fn::GetAtt": [
     "ServerNicInstanceB7DB1ADE",
     "PublicIp"
    ]
   }
  },
  "ServerInstanceId": {
   "Description": "Server Instance ID",
   "Value": {
    "Ref": "ServerInstance66AD925A"
   }
  },
  "ServerPublicIp": {
   "Description": "Server Public IP",
   "Value": {
    "Fn::GetAtt": [
     "ServerInstance66AD925A",
     "PublicIp"
    ]
   }
  }
 },
 "Rules": {
  "CheckBootstrapVersion": {
   "Assertions": [
    {
     "Assert": {
      "Fn::Not": [
       {
        "Fn::Contains": [
         [
          "1",
          "2",
          "3",
          "4",
          "5"
         ],
         {
          "Ref": "BootstrapVersion"
         }
        ]
       }
      ]
     },
     "AssertDescription": "CDK bootstrap stack version 6 required. Please run 'cdk bootstrap' with a recent version of the CDK CLI."
    }
   ]
  }
 }
}
